src/objects/Weekly_Customer_Snapshot__c.object
<CustomObject>
    <description>Source Report:  Customer Snapshot Source Report</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Safe_ID__c</fullName>
        <label>Account Safe ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Churn_Risk__c</fullName>
        <label>Customer Churn Risk</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Owner_Region__c</fullName>
        <label>Customer Experience Owner Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Owner__c</fullName>
        <label>Customer Experience Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_LTV_Tier__c</fullName>
        <label>Customer LTV Tier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_since_last_customer_touch__c</fullName>
        <formula>DateValue(CreatedDate)-Last_Customer_Touchpoint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last customer touch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Close_Date__c</fullName>
        <label>First Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Budget_M__c</fullName>
        <label>IT Budget ($M)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry_clean__c</fullName>
        <label>Industry (clean)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Customer_Touchpoint__c</fullName>
        <label>Last Customer Touchpoint</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Subscription_Cancelled_Date__c</fullName>
        <label>Maintenance/Subscription Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manual_Customer_Experience_Owner__c</fullName>
        <label>Manual Customer Experience Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_New_Segment__c</fullName>
        <label>Ops New Segment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Usage__c</fullName>
        <label>Product Usage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Vendor__c</fullName>
        <label>Storage Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Vendor_other__c</fullName>
        <label>Storage Vendor (other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner_Team_Group_Buckets__c</fullName>
        <label>Territory Owner Team (Group Buckets)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner_Team__c</fullName>
        <label>Territory Owner Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner__c</fullName>
        <label>Territory Owner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Bookings__c</fullName>
        <label>Total Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Turbonomic_Version__c</fullName>
        <label>Turbonomic Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_s_of_Automation_Utilized__c</fullName>
        <label>Type(s) of Automation Utilized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Weekly Customer Snapshot</label>
    <nameField>
        <label>Weekly Customer Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Customer Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>